k8s/kong/kong-routes.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana
  namespace: monitoring
  annotations:
    konghq.com/strip-path: "true"
    # kubernetes.io/tls-acme: "true" # Uncomment to enable TLS
    # cert-manager.io/cluster-issuer: "letsencrypt-prod" # Uncomment to enable TLS
    # konghq.com/plugins: ip-allowlist # Comment to disable IP allowlist plugin
spec:
  # tls: # Uncomment to enable TLS
  #   - secretName: "letsencrypt-prod-issuer-account-key" # Uncomment to enable TLS
  #     hosts: # Uncomment to enable TLS
  #       - "<grafana.kryfitek.com>" # Uncomment to enable TLS

  ingressClassName: "kong"
  rules:
    - host: grafana.kryfitek.com
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: kube-prometheus-stackr-grafana
                port:
                  number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backend
  namespace: backend
  annotations:
    konghq.com/strip-path: "true"
    # kubernetes.io/tls-acme: "true" # Uncomment to enable TLS
    # cert-manager.io/cluster-issuer: "letsencrypt-prod" # Uncomment to enable TLS
    # konghq.com/plugins: ip-allowlist # Uncomment to enable IP allowlist plugin
spec:
  # tls: # Uncomment to enable TLS
  #   - secretName: "letsencrypt-prod-issuer-account-key" # Uncomment to enable TLS
  #     hosts: # Uncomment to enable TLS
  #       - "<api.kryfitek.com>" # Uncomment to enable TLS

  ingressClassName: "kong"
  rules:
    - host: api.kryfitek.com
      http:
        paths:
          - pathType: Prefix
            path: /health
            backend:
              service:
                name: health
                port:
                  number: 5000
# ---
# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: frontend
#   namespace: frontend
#   annotations:
#     konghq.com/strip-path: "true"
#     # kubernetes.io/tls-acme: "true" # Uncomment to enable TLS
#     # cert-manager.io/cluster-issuer: "letsencrypt-prod" # Uncomment to enable TLS
#     # konghq.com/plugins: ip-allowlist # Uncomment to enable IP allowlist plugin
# spec:
#   # tls: # Uncomment to enable TLS
#   #   - secretName: "letsencrypt-prod-issuer-account-key" # Uncomment to enable TLS
#   #     hosts: # Uncomment to enable TLS
#   #       - "<www.kryfitek.com>" # Uncomment to enable TLS

#   ingressClassName: "kong"
#   rules:
#     # - host: www.krifitek.com
#       - http:
#           paths:
#             - pathType: Prefix
#               path: /
#               backend:
#                 service:
#                   name: frontend
#                   port:
#                     number: 80
